[project]

version = '0.0.0'
name="pyairbnb"
description = 'Airbnb scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
keywords=['airbnb', 'scraper', 'crawler','bot','reviews']
dependencies=['curl_cffi','bs4','requests']


[project.urls]
Homepage='https://github.com/johnbalvin/pyairbnb'